--- a/index.html
+++ b/index.html
@@ -1,1 +1,81 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="shortcut icon" type="image/jpg" href="google favicon.png"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"type="text/css" href="style.css">
+    <link rel="stylesheet" href="/css/all.min.css">
+    <title>Google</title>
+</head>
+<body>
+        <div class="link-container">
+            <ul class="link-list">
+                <li><a href="#" class="link">Gmail</a></li>
+                <li><a href="#"class="link">Images</a></li>
+                <li><a href="#"class="link"></a></li>
+                <li><a href="#" class="button">Sign in</a></li>
+            </ul>
+        </div>
+        <div class="logo-container">
+          
+                <img src="google.jpg">
+        </div>
+        <div class="input-link">
+            <div class="input">
+                <div><i class="fas fa-search"></i></div>
+                <div><input placeholder="Search Google or type URL"></div>
+                <div><i class="fas fa-microphone"></i></div>
+            </div>
+            <div class="link-buttons">
+                <ul>
+                    <li><a class="bottom-button" href="#">Google Search</a></li>
+                    <li><a class="bottom-button" href="#">I'm Feeling Lucky</a></li>
+                </ul>
+            </div>
+        </div>
 
+        <div class="middle-portion">
+             <div class="middle-link">
+                <a class="link-bottom" href="https://www.google.com/url?q=https://www.youtube.com/YouTubeIndia&source=hpp&id=19024439&ct=3&usg=AFQjCNHN0UaD0oz4u5-Dz8i7dQzprswt_w&sa=X&ved=0ahUKEwihtbv9wubwAhU-zjgGHZaUCUQQ8IcBCA4">Get COVID-19 facts from top health officials</a>
+            </div>
+            <div class="middle-link">
+                <span>Google offered in:</span>
+                <a class="link-bottom" href="#">हिन्दी</a>
+                <a class="link-bottom"href="#">বাংলা</a>
+                <a class="link-bottom"href="#">తెలుగు</a>
+                <a class="link-bottom"href="#">मराठी</a>
+                <a class="link-bottom"href="#">தமிழ்</a>
+                <a class="link-bottom"href="#">ગુજરાતી</a>
+                <a class="link-bottom"href="#">ಕನ್ನಡ</a>
+                <a class="link-bottom"href="#">മലയാളം</a>
+                <a class="link-bottom"href="#">ਪੰਜਾਬੀ</a>
+            </div>
+        </div>
+        <footer>
+            <div class="bottom-footer">
+                <div class="country">
+                  India
+                </div>
+                <hr style="color: black;">
+                <div class="bottom-footer1">
+                    <div class="listleft-bottom">
+                        <ul >
+                            <li><a href="#" class="link">About</a></li>
+                            <li><a href="#"class="link">Advertising</a></li>
+                            <li><a href="#"class="link">Business</a></li>
+                            <li><a href="#" class="link">How Search works</a></li>
+                        </ul>
+                    </div>
+                    <div class="listright-bottom">
+                        <ul >
+                            <li><a href="#" class="link">Privacy</a></li>
+                            <li><a href="#"class="link">Terms</a></li>
+                            <li><a href="#"class="link">Settings</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
+</body>
+</html>
